--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
     .card-title {
       font-weight: bold;
     }
+        /* Chatbot styles */
+        #chatbot.minimized .card-body, #chatbot.minimized .card-footer {
+      display: none;
+    }
+    #chatbot.minimized {
+      height: 50px;
+    }
+    #chatbot-toggle {
+      font-size: 18px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -176,13 +187,14 @@
     </div>
   </section>
 
-   <!-- チャットボットセクション -->
-   <div id="chatbot" class="card fixed-bottom me-4 mb-4 shadow-lg" style="width: 400px; right: 20px;">
-    <div id="chatbot-header" class="card-header text-center text-white" style="background-color: #2c6e49;">
-      キノコチャット
+
+  <!-- チャットボットセクション -->
+  <div id="chatbot" class="card fixed-bottom me-4 mb-4 shadow-lg" style="width: 400px; right: 20px;">
+    <div id="chatbot-header" class="card-header d-flex justify-content-between align-items-center text-white" style="background-color: #2c6e49;">
+      <span>キノコチャット</span>
+      <span id="chatbot-toggle" onclick="toggleChatbot()">_</span>
     </div>
-    <div id="chatbot-messages" class="card-body" style="height: 300px; overflow-y: auto;">
-    </div>
+    <div id="chatbot-messages" class="card-body" style="height: 300px; overflow-y: auto;"></div>
     <div id="chatbot-input" class="card-footer d-flex">
       <input type="text" id="userMessage" class="form-control me-2" placeholder="質問を入力してください...">
       <button class="btn btn-success" onclick="sendMessage()">送信</button>
@@ -190,6 +202,13 @@
   </div>
 
   <script>
+    function toggleChatbot() {
+      const chatbot = document.getElementById('chatbot');
+      const chatbotToggle = document.getElementById('chatbot-toggle');
+      chatbot.classList.toggle('minimized');
+      chatbotToggle.textContent = chatbot.classList.contains('minimized') ? '+' : '_';
+    }
+
     async function sendMessage() {
       const userMessage = document.getElementById('userMessage').value;
       if (userMessage.trim() === '') return;
@@ -204,7 +223,6 @@
       document.getElementById('userMessage').value = '';
 
       try {
-        // OpenAI APIへのリクエストを送信
         const reply = await sendMessageToOpenAI(userMessage);
         const botMessageDiv = document.createElement('div');
         botMessageDiv.className = 'text-start mb-2';
@@ -219,6 +237,12 @@
         chatbotMessages.scrollTop = chatbotMessages.scrollHeight;
       }
     }
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <script>
+    AOS.init();
   </script>
 
   <!-- その他のスクリプト -->
@@ -262,13 +286,19 @@
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script>
     AOS.init();
-  </script>
-  <script>
-    function showEcoAction() {
-      const ecoSuggestion = document.getElementById('eco-suggestion');
-      ecoSuggestion.style.display = 'block';
-      ecoSuggestion.scrollIntoView({ behavior: 'smooth' });
+
+    function toggleChatbot() {
+      const chatbot = document.getElementById('chatbot');
+      const chatbotToggle = document.getElementById('chatbot-toggle');
+      chatbot.classList.toggle('minimized');
+      chatbotToggle.textContent = chatbot.classList.contains('minimized') ? '+' : '_';
     }
+
+    document.body.addEventListener('htmx:afterSwap', function(evt) {
+      if (evt.detail.target.id === 'chatbot-messages') {
+        evt.detail.target.scrollTop = evt.detail.target.scrollHeight;
+      }
+    });
   </script>
 </body>
 </html>
